[project]
name = "exomiser-ml"
version = "0.1.16"
description = "A machine learning pipeline for variant prioritisation using Exomiser output."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name="Yasemin Bridges", email="y.bridges@qmul.ac.uk" }
]
dependencies = [
    "interpret>=0.7.2",
    "pheval>=0.5.4",
    "shap>=0.47.2",
    "xgboost>=3.0.0",
]

[project.scripts]
ml-utils = "exomiser_ml.main:ml"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
